--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <groupId>ru.javaprojects.mylunch</groupId>
     <artifactId>my-lunch</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>my-lunch</name>
+    <name>MyLunch</name>
     <description>Spring Boot 3.x application</description>
-    <url/>
+
     <properties>
         <java.version>21</java.version>
-        <springdoc.version>2.6.0</springdoc.version>
+        <springdoc.version>2.7.0</springdoc.version>
         <jsoup.version>1.18.1</jsoup.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
